# ityrbench

./: .gitmodules  CMakeLists.txt  README.md  anns.yaml  anns_hcnng.yaml  anns_hcnng_pbbs.yaml  anns_hnsw.yaml  anns_hnsw_pbbs.yaml  anns_pbbs.yaml  build_common.bash  cilksort.cpp  cilksort.yaml  cilksort_myth.cpp  cilksort_myth.yaml  common.hpp  exafmm.yaml  exafmm_mpi.yaml  heat.cpp  heat.yaml  heat_mpi.cpp  heat_mpi.yaml  kochi.yaml  pagerank.cpp  pagerank.yaml  pagerank_gbbs.yaml  pagerank_gemini.yaml  pagerank_gpop.cpp  run_common.bash  usort.yaml  uts++.yaml  uts.yaml
anns/benchmarks/ANN/HCNNG/: hcnng_index.h  neighbors.h
anns/benchmarks/ANN/HNSW/: HNSW.hpp  calc_recall.cpp  debug.hpp  eval_graph.cpp  parse_kNN.py  parse_range.py  run_HNSW_OOD.sh  run_HNSW_extra.sh  run_HNSW_range.sh  run_HNSW_single.sh  type_point.hpp
anns/benchmarks/ANN/bench/: benchUtils.h  neighborsTime.C  shortTestInputs.py
anns/benchmarks/ANN/pyNNDescent/: pynn_index2.h
anns/benchmarks/ANN/scripts/: FALCONN.sh  all_100M.sh  all_1M.sh  readme.md  vamana.sh
anns/benchmarks/ANN/scripts/FAISS/: FAISS_10M.sh  FAISS_1B.sh
anns/benchmarks/ANN/scripts/FALCONN/: FALCONN_10M.sh  FALCONN_1B.sh  FALCONN_1M.sh
anns/benchmarks/ANN/scripts/hnsw/: hnsw_100M.sh
anns/benchmarks/ANN/utils/: NSGDist.h  beamSearch.h  check_nn_recall.h  clusterEdge.h  indexTools.h  parse_files.h  parse_results.h  stats.h  types.h
anns/common/: parse_command_line.h
anns_pbbs/: .gitignore
anns_pbbs/benchmarks/ANN/: README.md
anns_pbbs/benchmarks/ANN/HCNNG/: neighbors.h
anns_pbbs/benchmarks/ANN/HNSW/: HNSW.hpp  calc_recall.cpp  debug.hpp  gen_model.cpp  makefile  parse_kNN.py  run_HNSW.sh  run_HNSW_single.sh
anns_pbbs/benchmarks/ANN/bench/: Makefile  benchUtils.h  neighborsTime.C
anns_pbbs/benchmarks/ANN/scripts/: all_10M.sh  all_1B.sh  all_experiments.sh  hcnng.sh  hnsw.sh
anns_pbbs/benchmarks/ANN/scripts/FAISS/: FAISS_100M.sh
anns_pbbs/benchmarks/ANN/scripts/FALCONN/: FALCONN_100M.sh
anns_pbbs/benchmarks/ANN/scripts/hnsw/: hnsw_10M.sh  hnsw_1B.sh  hnsw_1M.sh
anns_pbbs/benchmarks/ANN/utils/: NSGDist.h  check_nn_recall.h  clusterEdge.h
exafmm/: .gitignore  CMakeLists.txt
exafmm/examples/: fmm.cxx
exafmm/include/: args.h  base_mpi.h  bound_box.h  build_tree_tbb.h  dataset.h  traversal.h  types.h  up_down_pass.h  vec.h
exafmm/kernels/: biot_savart.h  helmholtz.h  laplace.h
exafmm/myconfig/: config.h
exafmm_mpi/: Makefile.am.include
exafmm_mpi/examples/: Makefile.in  fmm_mpi.cxx
exafmm_mpi/hss/: Makefile.in
exafmm_mpi/include/: args.h  bound_box.h  dataset.h  traversal.h  tree_mpi.h  up_down_pass.h
exafmm_mpi/wrappers/: Makefile.in
gbbs/: makefile.variables
gbbs/benchmarks/PageRank/: PageRank.cc  PageRank.h  makefile
gbbs/gbbs/: graph_io.cc  io.cc
gemini/: .gitignore  Makefile
gemini/core/: constants.hpp  graph.hpp
gemini/toolkits/: pagerank.cpp
usort/: CMakeLists.txt
usort/include/: ompUtils.tcc  parUtils.tcc
usort/src/: main.cpp  parUtils.cpp
uts/: main++.cc  main.cc  uts.c
